# indie-org

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.org  THANKS  configure.ac  indie-org-h-feed.el  indie-org-mf.el  indie-org-page-key.el  indie-org-pkg.el  indie-org-posse.el  indie-org-pub.el  indie-org-rss.el  indie-org-serde.el  indie-org-state.el  indie-org-webmentions.el  indie-org.el
.github/workflows/: push.yml  release.yml
contrib/: Makefile.am
doc/: .gitignore  Makefile.am  customized-org-pub-flow.txt  generic-org-pub-flow.txt  indie-org-pub-flow.txt  indie-org.texi  org-pub-flow.txt  webmentions-general.txt
test/: Makefile.am  ct-test-state.1  indie-org-posse-tests  indie-org-posse-tests.el  indie-org-pub-tests  indie-org-pub-tests.el  indie-org-tests  indie-org-tests.el  indie-org-webmentions-tests  indie-org-webmentions-tests.el  test-autotools-distro  test-pub-state  test-pub-state.el  test-state  test-state.1  test-state.2  test-state.3  test-state.el
test/test-posts/: Makefile.am  a.org  b.org
