AC_PREREQ([2.71])
AC_INIT([indie-org], [0.4.3], [sp1ff@pobox.com], [indie-org], [https://github.com/sp1ff/indie-org])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_SRCDIR([./indie-org.el])

AM_INIT_AUTOMAKE([-Wall -Werror gnits std-options dist-xz dist-zstd])

AM_PATH_LISPDIR

AC_CONFIG_FILES([Makefile contrib/Makefile test/Makefile test/test-posts/Makefile])
AC_OUTPUT
